--- a/Week3/Homework.ipynb
+++ b/Week3/Homework.ipynb
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nJeff Whitson\\nCheeseburger\\nGeologist\\n\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a multi-line comment\n",
     "\"\"\"\n",
@@ -47,12 +58,12 @@
     "Cheeseburger\n",
     "Geologist\n",
     "\n",
-    "\"\"\""
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,9 +117,7 @@
     "\n",
     "#create and assign 3 more variables called name, age, and length using multi variable naming method\n",
     "\n",
-    "name = \"Jeff\"\n",
-    "age = 37\n",
-    "height = \"5'10\"\n",
+    "name, age, height = \"Jeff\", 37, \"5'10\"\n",
     "\n",
     "miniBio =f\"Hi my name is {name}, I am {height} and {age} old today.\"\n",
     "\n",
