--- a/Week3/Homework.ipynb
+++ b/Week3/Homework.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,11 @@
       "['hello', 2, 3.5, [1, 2, 3, 4, 5], {'Resources': 'information'}, 'saturday', 'gym', 75, 'bootcamp']\n",
       "9\n",
       "['hello', 2, 3.5, [1, 2, 3, 4, 5], {'Resources': 'information'}, 'saturday', 'gym', 75, 'bootcamp']\n",
-      "['hello', 2, 3.5]\n"
+      "['hello', 2, 3.5]\n",
+      "['first', 'second', 'three', 'four', 'five']\n",
+      "['first', 'five', 'four', 'second', 'three']\n",
+      "copied list: ['first', 'five', 'four', 'second', 'three']\n",
+      "['first', 'five', 'four', 'second', 'three', 'hello', 2, 3.5]\n"
      ]
     }
    ],
@@ -176,6 +180,29 @@
     "newlist = inputList[0:3]\n",
     "print(inputList)\n",
     "print(newlist)\n",
+    "\n",
+    "#Create a new list called \"simList\" containing at least 5 elements of the same data type, either string, integer, float, or Boolean\n",
+    "\n",
+    "simlist = [\"first\", \"second\", \"three\", \"four\", \"five\"]\n",
+    "print(simlist)\n",
+    "\n",
+    "#Sort \"simList\", and print the list\n",
+    "\n",
+    "simlist.sort()\n",
+    "\n",
+    "print(simlist)\n",
+    "\n",
+    "#Copy the \"simList\" list to another 3rd list\n",
+    "\n",
+    "copiedlist = simlist.copy()\n",
+    "print(\"copied list:\" , copiedlist)\n",
+    "\n",
+    "#Add the 2nd and 3rd lists together into a 4th list\n",
+    "\n",
+    "listfour = simlist + newlist\n",
+    "print(listfour)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
