--- a/Week4/Homework4_Jeff_W.ipynb
+++ b/Week4/Homework4_Jeff_W.ipynb
@@ -247,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4950\n"
+      "5050\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
     "# 5. Use range as a loop to calculate the sum of all the numbers from 1 to 100\n",
     "\n",
     "numbers = 0\n",
-    "for allnumbers in range(1, 100):\n",
+    "for allnumbers in range(1, 101):\n",
     "    numbers += allnumbers\n",
     "print(numbers)\n",
     "\n"
@@ -513,15 +513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi first: jeff! Happy: saturday!\n",
-      "Hi first: brett! Happy: sunday!\n"
+      "Hi jeff! Happy saturday!\n",
+      "Hi brett! Happy sunday!\n"
      ]
     }
    ],
@@ -533,16 +533,14 @@
     "#     - Invoke this function with 1 variable only.\n",
     "\n",
     "def jeffcool(name, dayname = \"sunday\"):\n",
-    "    message = f\"Hi first: {name}! Happy: {dayname}!\"\n",
-    "    return message\n",
+    "    message = f\"Hi {name}! Happy {dayname}!\"\n",
+    "    print(message) \n",
     "\n",
-    "j = jeffcool(\"jeff\", \"saturday\")\n",
+    "jeffcool(\"jeff\", \"saturday\")\n",
     "\n",
-    "print(j)\n",
+    "jeffcool(\"brett\")\n",
     "\n",
-    "a = jeffcool(\"brett\")\n",
     "\n",
-    "print(a)\n",
     "\n"
    ]
   },
