--- a/Week5/Homework5_Jeff_W.ipynb
+++ b/Week5/Homework5_Jeff_W.ipynb
@@ -22,7 +22,7 @@
     " - comman separated files (values).\n",
     "\n",
     "6. When cleaning data what values do we not like in our data?\n",
-    " - you do not want missing values, duplicate records, outliers, inconsistent or incorrect data, data type mismatches, data integrity issues, encoding problems, inconsisten data/time formats, whitespace and formatting issues, scale differences, categorical variable issues, and data entry errors"
+    " - One specific keyword is Null vaLues. you do not want missing values, duplicate records, outliers, inconsistent or incorrect data, data type mismatches, data integrity issues, encoding problems, inconsisten data/time formats, whitespace and formatting issues, scale differences, categorical variable issues, and data entry errors"
    ]
   },
   {
@@ -39,20 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 0  1]\n",
-      "  [ 2  3]\n",
-      "  [ 4  5]]\n",
-      "\n",
-      " [[ 6  7]\n",
-      "  [ 8  9]\n",
-      "  [10 11]]]\n",
       "[[[ 0  1]\n",
       "  [ 2  3]\n",
       "  [ 4  5]]\n",
@@ -84,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,19 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  6]\n",
-      " [ 4 11]\n",
-      " [ 5 12]\n",
-      " [ 7 13]\n",
-      " [11 25]\n",
-      " [16 81]]\n"
+      "[[ 5  2]\n",
+      " [ 7  4]\n",
+      " [11  6]\n",
+      " [11 12]\n",
+      " [13 16]\n",
+      " [25 81]]\n"
      ]
     }
    ],
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +289,7 @@
       "all elements from the 4th to the 14th [ 3  4  5  6  7 10 11 12 13 14 15 16]\n",
       "the last 6 elements [22 23 24 25 26 27]\n",
       "all elements from 0 up to and including 15, using the negative number method [ 0  1  2  3  4  5  6  7 10 11 12 13 14 15]\n",
-      "from #20 every even element to the end [20 21 22 23 24 25 26 27]\n",
+      "from #20 every even element to the end [24 26]\n",
       "from last element moving forwared every 5th element [27 22 15 10  3]\n"
      ]
     }
@@ -307,7 +300,7 @@
     "print(\"all elements from the 4th to the 14th\", ComboArray[3:15])\n",
     "print(\"the last 6 elements\", ComboArray[-6:])\n",
     "print(\"all elements from 0 up to and including 15, using the negative number method\", ComboArray[-28:-10])\n",
-    "print(\"from #20 every even element to the end\", ComboArray[16:])\n",
+    "print(\"from #20 every even element to the end\", ComboArray[20::2])\n",
     "print(\"from last element moving forwared every 5th element\", ComboArray[-1::-5])"
    ]
   },
